# fifa26

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LESSONS.md  PLAN.md  README.md  START_PROJECT_PROMPT.md  TODO.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/agents/: backend.md  database.md  devops.md  frontend.md  orchestrator.md  qa.md
docs/: DEPLOY.md  REVIEW.md  penalty-game-plan.md  tournament-format.md
migrations/: env.py
migrations/versions/: 677311f11ba0_initial_schema.py  a1b2c3d4e5f6_actual_results.py  b2c3d4e5f6a7_actual_digested.py
scripts/: backup.sh  loadtest.py
src/: bot.py  config.py  middlewares.py  seed.py
src/data/: flags.py  players_loader.py  teams_en.py  wc2026.py
src/db/: base.py  repo.py  session.py
src/handlers/: __init__.py  awards.py  callbacks.py  fallback.py  group_stage.py  myforecast.py  playoff.py  report.py  results.py  start.py  states.py  stats.py
src/keyboards/: common.py
src/models/: __init__.py  enums.py  predictions.py  reference.py  results.py  user.py
src/pdf/: report.py
src/services/: accuracy.py  antiflood.py  awards.py  bracket.py  digest.py  scores.py  (+11 more)
tests/: conftest.py  test_accuracy.py  test_antiflood.py  test_awards.py  test_bracket.py  test_callbacks_guard.py  test_data.py  test_digest.py  test_football_api.py  test_myforecast.py  test_playoff_actual.py  test_playoff_digest.py  test_playoff_flow.py  test_repo_flow.py  test_report.py  test_result_matching.py  test_schema.py  test_scores.py  test_standings.py  test_stats.py  test_tiebreaks.py
(+49 files in other folders)
