[project]
name = "fifa26-bot"
version = "0.1.0"
description = "Telegram-бот «Прогноз Чемпионата мира 2026»"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13",
    "aiohttp>=3.10",  # HTTP-клиент для Tavily/Groq (идёт и как зависимость aiogram)
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.4",
    "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",  # async-драйвер SQLite для тестов (create_async_engine)
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"
# Автогенерённые Alembic-миграции не линтуем (формат задаёт Alembic).
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
